# oca-ocb-mail

./: README.md
odoo-bringout-oca-ocb-calendar_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-calendar_sms/calendar_sms/i18n/: bs.po
odoo-bringout-oca-ocb-calendar_sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-event_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-event_sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-event_sms/event_sms/i18n/: bs.po
odoo-bringout-oca-ocb-im_livechat/: README.md  pyproject.toml
odoo-bringout-oca-ocb-im_livechat/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-im_livechat/im_livechat/i18n/: bs.po
odoo-bringout-oca-ocb-im_livechat_mail_bot/: README.md  pyproject.toml
odoo-bringout-oca-ocb-im_livechat_mail_bot/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-im_livechat_mail_bot/im_livechat_mail_bot/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-mass_mailing/mass_mailing/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing_crm/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_crm/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-mass_mailing_crm/mass_mailing_crm/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing_crm_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_crm_sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-mass_mailing_crm_sms/mass_mailing_crm_sms/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing_event/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_event/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-mass_mailing_event/mass_mailing_event/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing_event_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_event_sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-mass_mailing_event_sms/mass_mailing_event_sms/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing_event_track/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_event_track/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-mass_mailing_event_track/mass_mailing_event_track/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing_event_track_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_event_track_sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-mass_mailing_event_track_sms/mass_mailing_event_track_sms/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing_slides/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_slides/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-mass_mailing_slides/mass_mailing_slides/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-mass_mailing_sms/mass_mailing_sms/i18n/: bs.po
odoo-bringout-oca-ocb-mass_mailing_themes/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_themes/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-mass_mailing_themes/mass_mailing_themes/i18n/: bs.po
odoo-bringout-oca-ocb-project_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-project_sms/project_sms/i18n/: bs.po
odoo-bringout-oca-ocb-sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-sms/sms/i18n/: bs.po
odoo-bringout-oca-ocb-spreadsheet_dashboard_im_livechat/: README.md  pyproject.toml
odoo-bringout-oca-ocb-spreadsheet_dashboard_im_livechat/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-spreadsheet_dashboard_im_livechat/spreadsheet_dashboard_im_livechat/i18n/: bs.po
odoo-bringout-oca-ocb-test_mail_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_mail_sms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-test_mass_mailing/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_mass_mailing/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
